--- a/index.css
+++ b/index.css
@@ -20,3 +20,9 @@ body{
     margin: 30px;
     font-size: 25px; font-weight: bold;
 }
+#icon{
+    padding-left:30px;
+}
+.display-4{
+    color: blue;
+}
