--- a/index.css
+++ b/index.css
@@ -1,6 +1,5 @@
 body{
     background-color: black;
-    background-image: linear-gradient(rgb(58, 54, 54),black);
     color: aliceblue;
     background-repeat: no-repeat;
 
@@ -13,6 +12,8 @@ body{
     margin: 10px;
 }
 #table{
+     background-color: black;
+    background-image: linear-gradient(to bottom right,rgb(58, 54, 54),black);
     color: whitesmoke;
     margin: 0px;
 }
